Source/WebCore/platform/gtk/ScrollbarThemeGtk.h
@@ -70,19 +70,17 @@ private:
     enum class StyleContextMode { Layout, Paint };
     GRefPtr<GtkStyleContext> getOrCreateStyleContext(Scrollbar* = nullptr, StyleContextMode = StyleContextMode::Layout);
 
-    IntSize buttonSize(Scrollbar&);
-
-    struct Properties {
-        int thumbFatness;
-        int troughBorderWidth;
-        int stepperSize;
-        int stepperSpacing;
-        gboolean troughUnderSteppers;
-    };
+    IntSize buttonSize(Scrollbar&, ScrollbarPart);
+    int stepperSize(Scrollbar&, ScrollbarPart);
+    int thumbFatness(Scrollbar&);
+    int thumbFatness(GtkStyleContext*, ScrollbarOrientation = VerticalScrollbar);
+    void getTroughBorder(Scrollbar&, GtkBorder*);
+    void getTroughBorder(GtkStyleContext*, GtkBorder*);
+    int scrollbarThickness(GtkStyleContext*, ScrollbarOrientation = VerticalScrollbar);
+    void getStepperSpacing(Scrollbar&, ScrollbarPart, GtkBorder*);
+    bool troughUnderSteppers(Scrollbar&);
 
     GRefPtr<GtkStyleContext> m_cachedStyleContext;
-    Properties m_cachedProperties;
-    int m_minThumbLength;
     gboolean m_hasForwardButtonStartPart;
     gboolean m_hasForwardButtonEndPart;
     gboolean m_hasBackButtonStartPart;
